Update to FlightSQL and Python client changes